# Snake_RL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  snake.ipynb
.github/workflows/: ci.yml  retrain.yml
.streamlit/: config.toml
app/: streamlit_app.py  style.css  utils.py
app/pages/: 1_Comparaison.py  2_Visualisation.py  3_Entrainement.py
artifacts/grid_results/: manifest.json
artifacts/grid_results/lr0.005_df0.95_ep50000/: config.json  history.json  metrics.json  model.pkl
artifacts/grid_results/lr0.005_df0.99_ep50000/: config.json  history.json  metrics.json  model.pkl
artifacts/grid_results/lr0.005_df0.9_ep50000/: config.json  history.json  metrics.json  model.pkl
artifacts/grid_results/lr0.01_df0.95_ep50000/: config.json  history.json  metrics.json  model.pkl
artifacts/grid_results/lr0.01_df0.99_ep50000/: config.json  history.json  metrics.json  model.pkl
artifacts/grid_results/lr0.01_df0.9_ep50000/: config.json  history.json  metrics.json  model.pkl
artifacts/grid_results/lr0.05_df0.95_ep50000/: config.json  history.json  metrics.json  model.pkl
artifacts/grid_results/lr0.05_df0.99_ep50000/: config.json  history.json  metrics.json  (+1 more)
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/snake_rl/: __init__.py  agent.py  cli_eval.py  cli_train.py  cli_visualize.py  env.py  evaluation.py  grid_search.py  training.py  visualization.py
tests/: conftest.py  test_agent.py  test_cli_args.py  test_env.py  test_env_rewards.py  test_evaluation.py  test_training.py
(+4 files in other folders)
