[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snake-rl"
version = "0.1.0"
description = "Apprentissage par renforcement (Q-learning) applique au jeu Snake"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mael Tremouille" }]
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.11",
    "pre-commit>=3.5",
]
notebook = [
    "ipython>=8.0",
    "jupyter>=1.0",
]

[project.scripts]
snake-train = "snake_rl.cli_train:main"
snake-eval = "snake_rl.cli_eval:main"
snake-visualize = "snake_rl.cli_visualize:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["snake_rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
